Task-158 Organized and added function header comments to new methods

--- a/web-scraping-electron-app/renderer/css/style.css
+++ b/web-scraping-electron-app/renderer/css/style.css
@@ -533,3 +533,8 @@ input[readonly].default-cursor {
 #ls-config-accordion {
     margin-top: 10px;
 }
+
+#log-output {
+    display: flex;
+    flex-direction: column-reverse;
+}
