--- a/web-scraping-electron-app/renderer/css/style.css
+++ b/web-scraping-electron-app/renderer/css/style.css
@@ -337,87 +337,8 @@ body {
 }
 
 /*=======================================================================
-    Annotation Page Styling
+    Scrape Page and External Window Styling
 =======================================================================*/
-#annotation-container {
-    min-width: 900px;
-    height: 68vh;
-    max-height: 70vh;
-    min-height: 60vh;
-}
-
-#annotation-webview {
-    height: 100%;
-    border: solid #d3d3d34d;
-    border-radius: 0.5%;
-}
-
-.embedded-content {
-    width: 100%;
-    height: 100%;
-    border: var(--border-style);
-    background-color: var(--primary-bg);
-    z-index: -1;
-}
-
-#ext-win-btn {
-    opacity: 0;
-    color: black;
-    cursor: pointer;
-    transform: translateY(-35%) translateX(-20%);
-}
-
-#ls-embedded, #ls-external, #ls-set, #ls-not-set {
-    height: 100%;
-}
-
-#ls-not-set {
-    display: flex;
-}
-
-#ls-set {
-    background-color: var(--secondary-bg);
-}
-
-#ls-external {
-    display: flex;
-    justify-content: center;
-}
-
-#ls-external-text {
-    align-self: center;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: xx-large;
-    opacity: 0.5;
-}
-
-#ls-form {
-    width: 80vw;
-    max-width: 750px;
-    min-width: 405px;
-}
-
-/*=======================================================================
-    Responsive Utilities for Modern Design
-=======================================================================*/
-@media (max-width: 768px) {
-    /*#d_content {
-        padding: 20px;
-        max-width: 90%;
-    }*/
-
-    .btn-outline-secondary {
-        padding: 8px 15px;
-    }
-
-    .navbar-brand {
-        font-size: 1.25rem;
-    }
-}
-
-input[readonly].default-cursor {
-    cursor: default;
-}
 
 #import-btn-container {
     display: flex;
@@ -521,6 +442,67 @@ input[readonly].default-cursor {
     margin-left: 5px;
 }
 
+/*=======================================================================
+    Annotation Page Styling
+=======================================================================*/
+#annotation-container {
+    min-width: 900px;
+    height: 68vh;
+    max-height: 70vh;
+    min-height: 60vh;
+}
+
+#annotation-webview {
+    height: 100%;
+    border: solid #d3d3d34d;
+    border-radius: 0.5%;
+}
+
+.embedded-content {
+    width: 100%;
+    height: 100%;
+    border: var(--border-style);
+    background-color: var(--primary-bg);
+    z-index: -1;
+}
+
+#ext-win-btn {
+    opacity: 0;
+    color: black;
+    cursor: pointer;
+    transform: translateY(-35%) translateX(-20%);
+}
+
+#ls-embedded, #ls-external, #ls-set, #ls-not-set {
+    height: 100%;
+}
+
+#ls-not-set {
+    display: flex;
+}
+
+#ls-set {
+    background-color: var(--secondary-bg);
+}
+
+#ls-external {
+    display: flex;
+    justify-content: center;
+}
+
+#ls-external-text {
+    align-self: center;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: xx-large;
+    opacity: 0.5;
+}
+
+#ls-form {
+    width: 80vw;
+    max-width: 750px;
+    min-width: 405px;
+}
+
 #anno-webview {
     height: 90vh;
     padding-bottom: 15px;
@@ -534,7 +516,39 @@ input[readonly].default-cursor {
     margin-top: 10px;
 }
 
+/*=======================================================================
+    Log Page Styling
+=======================================================================*/
+
 #log-output {
     display: flex;
     flex-direction: column-reverse;
+}
+
+#header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+/*=======================================================================
+    Responsive Utilities for Modern Design
+=======================================================================*/
+@media (max-width: 768px) {
+    /*#d_content {
+        padding: 20px;
+        max-width: 90%;
+    }*/
+
+    .btn-outline-secondary {
+        padding: 8px 15px;
+    }
+
+    .navbar-brand {
+        font-size: 1.25rem;
+    }
+}
+
+input[readonly].default-cursor {
+    cursor: default;
 }
