--- a/web-scraping-electron-app/renderer/components/annotation.html
+++ b/web-scraping-electron-app/renderer/components/annotation.html
@@ -47,7 +47,7 @@
     <!--Config menu for updating LS URL/API Token-->
     <div class="accordion-item accordion" id="ls-config-accordion">
         <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#ls-config" aria-expanded="false" aria-controls="ls-config">
+            <button class="accordion-button collapsed" id="config-accordion" type="button" data-bs-toggle="collapse" data-bs-target="#ls-config" aria-expanded="false" aria-controls="ls-config">
                 Label Studio Configuration
             </button>
         </h2>
