Squashed commit of the following:
commit 84358463b450638c097676b6f4b8e9d27a800bba
Merge: 8f8f783 c2b841f
Author: David Joseph De Mers <djdemers@asu.edu>
Date:   Thu Dec 5 07:35:31 2024 -0800

    Merge pull request #23 from dlsmallw/US-140

    Merge US-140 branch into dev

commit c2b841f71a50a59bcc5e79b2618e40b3c1fb0a38
Author: dlsmallw <dlsmallw@asu.edu>
Date:   Thu Dec 5 17:19:59 2024 +0900

    Create yarn.lock

commit 0007856ebc0d9d194565f4087a31ea72a990eb64
Author: dlsmallw <dlsmallw@asu.edu>
Date:   Thu Dec 5 17:17:46 2024 +0900

    Fix yarn error

commit aa827283972627aca718875e5b1ad9050432ec7f
Author: dlsmallw <dlsmallw@asu.edu>
Date:   Thu Dec 5 17:04:17 2024 +0900

    Made some minor fixes

commit aa3a4eef404f14a1b14b0295302fbd6601daabc6
Author: dlsmallw <dlsmallw@asu.edu>
Date:   Thu Dec 5 16:58:34 2024 +0900

    Fix small styling bug with body border

commit 80e50b5775727006d10f6fe9917b3976832e550e
Author: dlsmallw <dlsmallw@asu.edu>
Date:   Thu Dec 5 16:04:23 2024 +0900

    Task-158 Fixed small bug with logger not sending new logs to renderer after clearing logs

commit 5aa443cebe3786d10cc9ee6df4a8e6c6d424a5ac
Author: dlsmallw <dlsmallw@asu.edu>
Date:   Thu Dec 5 15:27:29 2024 +0900

    Fixed error preventing logs from being cleared

commit d22971cbf05edd43d1bfb509381943ae973b7fe8
Merge: 19f8553 603b469
Author: dlsmallw <dlsmallw@asu.edu>
Date:   Thu Dec 5 15:25:28 2024 +0900

    Merge branch 'US-140' into task#155

commit 603b4699139e35a912359a682723979a62449319
Author: dlsmallw <dlsmallw@asu.edu>
Date:   Thu Dec 5 15:07:23 2024 +0900

    Task-158 Organized and added function header comments to new methods

commit 6a380d4f505812a51204f7cd4f9786a5722241ba
Merge: 087a359 5e87f4f
Author: dlsmallw <dlsmallw@asu.edu>
Date:   Thu Dec 5 13:35:15 2024 +0900

    Merge branch 'US-140' into Task-158

commit 5e87f4ff62de1d39c0e2fd992beacfbf1e2cf0c0
Merge: adf3147 8f8f783
Author: dlsmallw <dlsmallw@asu.edu>
Date:   Thu Dec 5 13:34:58 2024 +0900

    Merge 

--- a/web-scraping-electron-app/renderer/components/annotation.html
+++ b/web-scraping-electron-app/renderer/components/annotation.html
@@ -14,13 +14,10 @@
         </div>
         <!--The embedded LS app-->
         <div id="ls-set" class="position-relative">
-            <iframe
-                class="embedded-content shadow rounded"
-                id="annotation-iframe"
-                src=""
-                height="600"
-                sandbox="allow-scripts allow-same-origin allow-forms"
-            ></iframe>
+            <webview 
+                id="annotation-webview" 
+                src="">
+            </webview>
             <!--A button for openning the LS app in an external window-->
             <svg 
                 class="position-absolute bottom-0 end-0" 
@@ -43,7 +40,7 @@
     <!--Config menu for updating LS URL/API Token-->
     <div class="accordion-item accordion" id="ls-config-accordion">
         <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#ls-config" aria-expanded="false" aria-controls="ls-config">
+            <button class="accordion-button collapsed" id="config-accordion" type="button" data-bs-toggle="collapse" data-bs-target="#ls-config" aria-expanded="false" aria-controls="ls-config">
                 Label Studio Configuration
             </button>
         </h2>
