Begin work on notifications. Test Phase.

--- a/web-scraping-electron-app/renderer/components/home.html
+++ b/web-scraping-electron-app/renderer/components/home.html
@@ -1,4 +1,13 @@
 <!-- HTML component used for the home page in the application. -->
+<div class="notification-container" style="align-items: center">
+    <p><br><br></p>
+
+    <a href="#" class="notification" style="margin-right: auto">
+        <span class="caption">notifications</span>
+        <span class="badge">3</span>
+    </a>
+</div>
+
 <div id="home-container" class="my-5 container">
     <h1 class="display-4">Home</h1>
     <p>Welcome to our modern, elegant web scraping application!</p>
