--- a/web-scraping-electron-app/renderer/css/style.css
+++ b/web-scraping-electron-app/renderer/css/style.css
@@ -137,10 +137,12 @@ body {
     Notification Settings
 =======================================================================*/
 .notification {
+    image-rendering: auto;
     float: right;
-    background-color: #90caf9;
+    background-color: #bbdefb;
     font-weight: lighter;
     color: black;
+    visibility: hidden;
     text-decoration: none;
     padding: 5px 6px;
     position: relative;
@@ -161,7 +163,36 @@ body {
 }
 
 .notification:hover {
-    background: blue;
+    background: #3498db;
+}
+
+.notification:target {
+    display: block;
+}
+
+.notification-box {
+    image-rendering: auto;
+    float: right;
+    background-color: #bbdefb;
+    font-weight: lighter;
+    color: black;
+    visibility: hidden;
+    text-decoration: none;
+    padding: 5px 6px;
+    position: relative;
+    top: 0;
+    right: 0;
+    display: inline-block;
+    border-radius: 10px;
+}
+
+.more-button {
+    background: #bbdefb;
+    color: #121212;
+    font-weight: bolder;
+    font-style: italic;
+    float: right;
+    visibility: hidden;
 }
 
 /*=======================================================================
