Task-216: show data stored in firebase on database page

--- a/web-scraping-electron-app/renderer/components/database.html
+++ b/web-scraping-electron-app/renderer/components/database.html
@@ -2,4 +2,7 @@
 <div id="database-container" class="my-5 container" style="display: none;">
     <h1 class="display-4">Database Information</h1>
     <p>Website Info</p>
+    <pre id="website-info" class="bg-dark text-white p-3 rounded" style="max-height: 400px; overflow-y: auto;">
+        <!-- website information will be added here -->
+    </pre>
 </div>
