--- a/web-scraping-electron-app/renderer/components/home.html
+++ b/web-scraping-electron-app/renderer/components/home.html
@@ -4,13 +4,19 @@
 
     <button class="notification" id="notification-button" style="visibility: visible">
         <span>Notifications</span>
-        <span class="badge">3</span>
+        <span class="badge" id="number-of-notifications">3</span>
     </button>
 
     <select id="notification-box" style="visibility: hidden; float:right" class="notification-box"></select>
 
     <button class="notification" id="notification-x-button">
         <span class="badge">x</span>
+    </button>
+
+    <p><br></p>
+
+    <button class="notification" id="notification-dismiss-button">
+        <span class="badge">dismiss</span>
     </button>
 </div>
 
