Add functionality of tutorial prompt/tutorial disable. Fix general display bugs.

--- a/web-scraping-electron-app/renderer/components/home.html
+++ b/web-scraping-electron-app/renderer/components/home.html
@@ -7,7 +7,7 @@
         <span class="badge" id="number-of-notifications">3</span>
     </button>
 
-    <select id="notification-box" style="visibility: hidden; float:right" class="notification-box"></select>
+    <select id="notification-box" style="visibility: hidden; float:right; background-color: white; color: black" class="notification-box"></select>
 
     <button class="notification" id="notification-x-button">
         <span class="badge">x</span>
@@ -18,6 +18,14 @@
     <button class="notification" id="notification-dismiss-button">
         <span class="badge">dismiss</span>
     </button>
+</div>
+
+<div id="tutorial">
+    <h3 style="text-decoration: underline">Hello, and welcome to the program!<br></h3>
+    <p id="tutorial-dialog">If this is your first time, would you like to run through a brief tutorial?
+        On completion of tutorial, or on clicking "No", this prompt will not appear again.<br><br></p>
+    <button id="yes-tutorial" class="tutorial-button">Yes</button>
+    <button id="no-tutorial" class="tutorial-button">No</button>
 </div>
 
 <div id="home-container" class="my-5 container">
