Begin work on tutorial's home section.

--- a/web-scraping-electron-app/renderer/css/style.css
+++ b/web-scraping-electron-app/renderer/css/style.css
@@ -186,7 +186,7 @@ body {
     border-radius: 10px;
 }
 
-div#tutorial
+div#tutorial, div#tutorial-home
 {
     position:absolute;
     text-align: center;
