Update functionality to remove old tutorial idea.

--- a/web-scraping-electron-app/renderer/components/home.html
+++ b/web-scraping-electron-app/renderer/components/home.html
@@ -20,19 +20,9 @@
     </button>
 </div>
 
-<div id="tutorial-home">
-    <h3 style="text-decoration: underline">The Home Page<br></h3>
-    <p>This is the home page! This is the default page that opens up when you launch the program.
-        In addition, the home page is where you can see any notifications you may have. We have given you
-        some example notifications that you can play with. Click on "notifications" to see your notifications.
-        Then you can click x to save your notifications but close the notifications box, or click dismiss to
-        dismiss the selected notification. Click on the box itself to see or select different notifications.<br><br></p>
-    <button id="next-tutorial" class="tutorial-button">Next</button>
-</div>
-
 <div id="tutorial">
     <h3 style="text-decoration: underline">Hello, and welcome to the program!<br></h3>
-    <p id="tutorial-dialog">If this is your first time, would you like to run through a brief tutorial?
+    <p id="tutorial-dialog">If this is your first time, would you like to watch a brief tutorial?
         On completion of tutorial, or on clicking "No", this prompt will not appear again.<br><br></p>
     <button id="yes-tutorial" class="tutorial-button">Yes</button>
     <button id="no-tutorial" class="tutorial-button">No</button>
